css/style.css
/* ... */
.nav__link:hover {
    opacity: 0.8;
}

.nav .btn-transparent {
    /* margin-right: 1rem; */
}

@media screen and (min-width: 992px) {
    .bar__nav-toggle {
        display: none;
    }

    .nav {
        display: initial;
        position: static;
        width: unset;
        height: unset;
        padding: unset;
        background: transparent;
    }

    .nav__link {
        border-bottom: none;
    }

    .nav__link:not(:last-of-type) {
        margin-right: 2rem;
    }
}

/* ******************************************************** END OF HEADER SECTION ************************************************************ */
/* Vimeo Section */
.embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
}

.embed-container iframe,
.embed-container object,
.embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100% ;
}

/* Slide Section */
.slide {
    display: flex;
    justify-content: center;
    align-items: center;
}

.slide img {
    width: 90%;
    height: auto;
}

/* About Section */
.about {
    padding: 12rem 8rem;
    background-color: var(--color-cream);
}

.about-box {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
}

.about-box h4 {
    font-size: 3rem;
    font-weight: 500;
    letter-spacing: .3px;
    margin-bottom: 1.5rem;
}

.about-box h3 {
    color: var(--color-black);
    font-size: 1.8rem;
    font-weight: 500;
    letter-spacing: .3px;
    margin-bottom: 1.5rem;
}

.about-box p {
    color: var(--color-medium-grey);
    font-size: 1.2rem;
    font-weight: 400;
    letter-spacing: .3px;
    line-height: 1.85;
}

.about-box p span {
    font-style: italic;
}

.about-info {
    flex-basis: 20%;
}

.about-team {
    flex-basis: 20%;
}

/* Type Section */
.type {
    padding: 12rem 8rem;
    background-color: var(--color-dark-grey);
}

.type-box {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.type-image {
    flex-basis: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.type-image img {
    width: 75%;
    height: auto;
}

.type-text {
    flex-basis: 40%;
    display: flex;
    flex-direction: column;
}

.type-text h2 {
    color: var(--color-white);
    font-size: 6rem;
    font-weight: 200;
    line-height: 1.3;
    margin-bottom: 3rem;
    text-align: left;
}

.type-text p {
    color: var(--color-cream);
    font-size: 1.4rem;
    font-weight: 400;
    letter-spacing: .3px;
    line-height: 2;
    margin-bottom: 4rem;
}

/* Color Section */
.color {
    padding: 12rem 8rem;
}

.color-box {
    display: flex;
    flex-direction: row-reverse;
    flex-wrap: wrap;
    justify-content: space-between;
}

.color-image {
    flex-basis: 40%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.color-image img {
    width: 75%;
    height: auto;
}

.color-text {
    flex-basis: 50%;
    display: flex;
    flex-direction: column;
}

.color-text h2 {
    color: var(--color-black);
    font-size: 6rem;
    font-weight: 200;
    line-height: 1.3;
    margin-bottom: 3rem;
    text-align: left;
}

.color-text p {
    color: var(--color-medium-grey);
    font-size: 1.4rem;
    font-weight: 400;
    letter-spacing: .3px;
    line-height: 2;
    margin-bottom: 4rem;
    padding-right: 16rem;
}

/* Materials Section */
.materials {
    padding: 12rem 8rem;
    background-color: var(--color-dark-grey);
}

.materials-box {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.materials-image {
    flex-basis: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.materials-image img {
    width: 75%;
    height: auto;
}

.materials-text {
    flex-basis: 40%;
    display: flex;
    flex-direction: column;
}

.materials-text h2 {
    color: var(--color-white);
    font-size: 6rem;
    font-weight: 200;
    line-height: 1.3;
    margin-bottom: 3rem;
    text-align: left;
}

.materials-text p {
    color: var(--color-cream);
    font-size: 1.4rem;
    font-weight: 400;
    letter-spacing: .3px;
    line-height: 2;
    margin-bottom: 4rem;
}

/* Info Section */
.info {
    padding: 12rem 8rem;
}

.info-box {
    /* width: 60%; */
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
}

.info-box h3 {
    font-family: 'Mulish', sans-serif;
    color: var(--color-black);
    font-size: 1.6rem;
    font-weight: 500;
    letter-spacing: .3px;
    line-height: 1.3;
    margin-bottom: 2rem;
    text-align: center;
}

.info-box p {
    color: var(--color-medium-grey);
    font-size: 1.4rem;
    font-weight: 400;
    letter-spacing: .3px;
    line-height: 1.85;
    text-align: center;
    padding: 0 26rem;
}

/* Sketch Section */
.sketch {
    /* padding: 0 8rem; */
}

.sketch-box {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
    grid-gap: 30px 0;
}

.sketch-item {
    width: 30%;
    height: auto;
    background-color: var(--color-white);
}

.sketch-item img {
    width: 100%;
    height: auto;
}
/* ******************************************************** Footer Section ***************************************************** */
/* Footer Section */
.footer {
    margin-top: 12rem;
    padding: 12rem 8rem;
    border-top: .5px solid rgb(196, 196, 196);
    border-bottom: .5px solid rgb(196, 196, 196);
}

.footer-box {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: flex-start;
}

.footer-info {
    flex-basis: 30%;
    display: flex;
    flex-direction: column;
}

.footer-info h3 {
    color: var(--color-black);
    font-size: 1.6rem;
    font-weight: bolder;
    letter-spacing: .3px;
    margin-bottom: 1.5rem;
}
/* ... */

